# memoryx

./: .env.example  .gitattributes  .gitignore  AGENT_RULES.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.0.0-rc.1.md  RELEASE_NOTES_v2.0.0-rc.2.md  SUPPORT.md  constraints-memoryx-stable.txt  memoryx-pure-core-code.txt  production_selfcheck_report.json  production_selfcheck_report.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
config/: weights.yaml
db/: schema.sql
deploy/: memoryx-hermes.service
docs/: api_reference.md  deployment.md  examples.md  p11_cognitive_guard_narrative.md  p12_1_execution_plan.md  p15_temporal_runtime.md  p8_observability_e2e_gate.md  quickstart.md  start_hermes_with_memoryx.md
feishu/: README.md  __init__.py  bot_service.py  client.py  queue.py  schemas.py
memoryx/: __init__.py  auto_upgrade.py  bank.py  conversation_log.py  event_bus.py  llm_consolidation_engine.py  logging.py  manager.py  mcp_server.py  persona.py  pii_filter.py  plugin.py  reflect.py  scene.py  seed.py  self_editor.py  symbolic.py
memoryx-pure-release/: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  P14.2_PLAN.md  README.md  README_MEMORYX_PRODUCTION_SELFCHECK.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  verify_p143.py
scripts/: complete_migration.py  configure_embedding_api.py  memoryx_production_acceptance.sh  memoryx_repo_guard.py  memoryx_runtime_lockdown.sh  pre-commit  release-check.py  run_memoryx_release_gate.py  test_siliconflow_embedding.py  verify_memoryx.py
tests/: test_active_recall_engine.py  test_bank.py  (+50 more)
(+366 files in other folders)
